crates/linkage-blaze-core/tests/ui_fail/n_too_small_for_marks.stderr
error[E0080]: evaluation panicked: linkage has more marks than MARKS
  --> tests/ui_fail/n_too_small_for_marks.rs:5:45
   |
 5 |   const N_TOO_SMALL: LinkageFixed<0, 3, 16> = LinkageFixed::start()
   |  _____________________________________________^
 6 | |     .mark("mark1")
 7 | |     .forward(1.0)
 8 | |     .mark("mark2")
...  |
11 | |     .forward(1.0)
12 | |     .mark("mark4"); // error: linkage has more marks than MARKS
   | |__________________^ evaluation of `N_TOO_SMALL` failed inside this call
   |
note: inside `LinkageFixed::<0, 3, 16>::mark`
  --> $RUST/core/src/panic.rs
   |
   |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
   |
  ::: src/lib.rs
   |
   |                 assert!(self.mark_len < MARKS, "linkage has more marks than MARKS");
   |                 ------------------------------------------------------------------- in this macro invocation
